--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@types/bootstrap": "^5.2.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "dayjs": "^1.11.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "microcms-js-sdk": "^2.3.2",
